--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,13 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation 'com.google.firebase:firebase-darabase:21.0.4'
-    implementation 'com.androidx.support:design:28.0.0'
+    implementation platform('com.google.firebase:firebase-bom:30.0.2')
+    implementation 'com.google.firebase:firebase-database'
+    //implementation 'com.androidx.support:design:28.0.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 }
