--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,14 @@
         android:theme="@style/Theme.MinorApp"
         tools:targetApi="31">
         <activity
-            android:name=".MapActivity"
-            android:exported="false" />
+            android:name=".InfoActivity"
+            android:exported="true" />
+        <activity
+            android:name=".WarningActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".ChatActivity"
+            android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
